k8s_addons/APP_MESH/titan/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gcp-collector-ns
  labels:
    mesh: test-mesh
    gateway: ing-gw-test
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
---
