k8s_addons/APP_MESH/titan/rds.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gcp-collector-ns
  labels:
    mesh: 
    #    gateway: ingress-gw
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
