k8s_addons/APP_MESH/titan/test-meshed.yaml
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: gcp-collector
  namespace: gcp-collector-ns
spec:
  provider:
    virtualNode:
      virtualNodeRef:
        name: gcp-collector
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: auth-tst
  namespace: gcp-collector-ns
spec:
  provider:
    virtualRouter:
      virtualRouterRef:
        name: auth-tst-router
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: rds
  namespace: gcp-collector-ns
spec:
  awsName: bdopcfl.crhq8x97nooy.us-east-2.rds.amazonaws.com
  provider:
    virtualNode:
      virtualNodeRef:
        name: rds
