k8s_addons/APP_MESH/titan/vn-auth.yaml
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: auth-tst
  namespace: gcp-collector-ns
meshName: titan
spec:
#  awsName: auth-appmesh-tst.gcp-collector-ns.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: auth-tst-router
---
