k8s_addons/APP_MESH/titan/vn-gcp-col.yaml
---
meshName: titan
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: gcp-collector
  namespace: gcp-collector-ns
spec:
#  awsName: gcp-collector.gcp-collector-ns.svc.cluster.local
  provider:
    virtualNode:
      virtualNodeRef:
        name: gcp-collector
---
