k8s_addons/APP_MESH/titan/vn-rds.yaml
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: rds
  namespace: rds-ns
meshName: titan
spec:
  awsName: bdopcfl.crhq8x97nooy.us-east-2.rds.amazonaws.com
  provider:
    virtualNode:
      virtualNodeRef:
        name: rds
---
