k8s_addons/APP_MESH/titan/vn-titan-ui.yaml
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: titan-ui
  namespace: titan-ui-ns
spec:
  awsName: titan-ui.titan-ui-ns.svc.cluster.local
  provider:
    virtualNode:
      virtualNodeRef:
        name: titan-ui
---
